--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title><%= @title %></title>
+<title>hello... <%= @title %></title>
 <%= csrf_meta_tag %>
 </head>
 <body>
