--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,11 @@
 <body>
 	<div class="container">
 		<%= render 'layouts/header' %>
-
+		
 <section class="round">
 <%= yield %>
 </section>
+<%= render 'layouts/footer' %>
 </div>
 </body>
 </html>
